# website

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: CNAME  index.md
docs/assets/: extra.css
