[project]
name = "teura-website"
version = "1.0.0"
description = "TEURA sp. z o.o. static website"
requires-python = ">=3.9"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-static-i18n>=1.2.0",
    "pymdown-extensions>=10.5",
]

# This is a static website project, not a Python package
# No build-system needed as we're only managing dependencies